fix: color scheme for dark mode

--- a/src/components/Board/Board.css
+++ b/src/components/Board/Board.css
@@ -63,7 +63,7 @@
 }
 
 .is-dark .Board__tiles {
-  background: #303030;
+  background: #444;
 }
 
 .Board__tiles .Grid {
