--- a/src/components/Board/Output/SymbolOutput/SymbolOutput.css
+++ b/src/components/Board/Output/SymbolOutput/SymbolOutput.css
@@ -6,8 +6,7 @@
 }
 
 .is-dark .SymbolOutput {
-  color: #fff;
-  background: #303030;
+  background: #ddd;
 }
 
 .SymbolOutput__value {
